# aas-core3.0-csharp

./: .gitignore  AUTHORS  LICENSE  README.md  change_log.html  contributing.html  design_decisions.html  index.html  index.json  manifest.json  mristin.runsettings  toc.html  xrefmap.yml
api/: AasCore.Aas3_0.AasSubmodelElements.html  AasCore.Aas3_0.AdministrativeInformation.html  AasCore.Aas3_0.AnnotatedRelationshipElement.html  AasCore.Aas3_0.AssetAdministrationShell.html  AasCore.Aas3_0.AssetInformation.html  (+167 more)
dev_scripts/: pyproject.toml  setup.py  update_to_aas_core_meta_codegen.py  update_to_aas_core_meta_codegen_and_testgen.py
dev_scripts/aas_core3/: __init__.py
dev_scripts/codegen/: codegen.py  download_aas_core_meta_model.py  meta_model.py
dev_scripts/continuous_integration_of_dev_scripts/: precommit.py  pylint.rc
dev_scripts/test_codegen/: generate_all.py  generate_common_jsonization.py  generate_test_for_copying.py  generate_test_for_descend_and_visitor_through.py  generate_test_for_descend_once.py  generate_test_for_enhancing.py  generate_test_for_get_X_or_default.py  generate_test_for_jsonization_of_concrete_classes.py  generate_test_for_jsonization_of_concrete_classes_outside_container.py  generate_test_for_jsonization_of_enums.py  generate_test_for_jsonization_of_interfaces.py  generate_test_for_over_X_or_empty.py  generate_test_for_xmlization_of_concrete_classes.py  generate_test_for_xmlization_of_concrete_classes_outside_container.py  generate_test_for_xmlization_of_interfaces.py  generate_test_verification_of_enums.py  test_data_io.py
(+7642 files in other folders)
